@@ -1,5 +1,5 @@
 <span id="top"><span>
-Features: <a href="#core">Core</a> | <a href="#unit">Unit</a> | <a href="#http">Http</a> | <a href="#tree">Tree</a> | <a href="#load">Load</a> | <a href="#data">Data</a> | <a href="#view">View</a> | <a href="#mvvm">MVVM</a> | <a href="#time">Time</a> --> <a href="tut-by">Example</a>
+Features: <a href="#base">Base</a> | <a href="#core">Core</a> | <a href="#unit">Unit</a> | <a href="#http">Http</a> | <a href="#tree">Tree</a> | <a href="#load">Load</a> | <a href="#data">Data</a> | <a href="#view">View</a> | <a href="#mvvm">MVVM</a> | <a href="#time">Time</a> >> <a href="tut-by">Example</a>
 
 ```html
 <!-- Total gzipped & compiled size < 2.5KB -->
@@ -16,7 +16,7 @@ Features: <a href="#core">Core</a> | <a href="#unit">Unit</a> | <a href="#http">
 <script src="pro.time.js"></script><!-- Time-functions -->
 ```
 
-### &lt;script src="pro.js">&lt;/script>
+### &lt;script src="pro.js">&lt;/script> <span id="base"> |  </span><a href="#top">To top >></a>
  - defines short aliases for popular DOM-methods:
 
 ```javascript
@@ -41,7 +41,7 @@ element.toChildFree(); // Removes all childs (makes an element child free)
 ```
 ---
 
-### &lt;script src="pro.core.js">&lt;/script> <span id="core"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.core.js">&lt;/script> <span id="core"> |  </span><a href="#top">To top >></a>
  - provides **sync** event-based programming model with on/once/out interface.
 Use `pro.core` constructor-function to create new ProJS-like components:
 
@@ -69,7 +69,7 @@ pro.core.error(function (err) { console.log(err); });
 ```
 ---
 
-### &lt;script src="pro.unit.js">&lt;/script> <span id="unit"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.unit.js">&lt;/script> <span id="unit"> |  </span><a href="#top">To top >></a>
  - introduces unit with *states* concept:
 
 ```javascript
@@ -124,7 +124,7 @@ app.unit('NewsList') // Defines 'NewsList' unit
 
 ---
 
-### &lt;script src="pro.http.js">&lt;/script> <span id="http"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.http.js">&lt;/script> <span id="http"> |  </span><a href="#top">To top >></a>
  - a sweet wrapper over *XMLHttpRequest* object available via `pro.http` object:
  
 ```javascript
@@ -145,7 +145,7 @@ this.on('load-news', function (eventModel) {
 Send other types of requests:
 ```javascript
 pro.http.to('api/news')
-   .post({ title: 'ProJS framework released!',
+   .post({ topic: 'ProJS framework released!',
            text: 'Good news for all of you!' })
    //.put({ text: 'Frontend future is elegant with ProJS!' })
    //.delete({ text: 'Angular + React + VueJS' })
@@ -165,7 +165,7 @@ pro.http.on(401, function () {
 ```
 ---
 
-### &lt;script src="pro.tree.js">&lt;/script> <span id="tree"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.tree.js">&lt;/script> <span id="tree"> |  </span><a href="#top">To top >></a>
  - performs in depth DOM-tree traversal for DOM preprocessing:
  
  ```javascript
@@ -190,7 +190,7 @@ pro.http.on(401, function () {
 
 ---
 
-### &lt;script src="pro.load.js">&lt;/script> <span id="load"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.load.js">&lt;/script> <span id="load"> |  </span><a href="#top">To top >></a>
 - subscribes on DOM-tree traversal and loads HTML content for elements with **'pro-load'** tags:
 
 `<div pro-load="news-component.html"></div>`
@@ -229,7 +229,7 @@ pro.load.on('news-component.html', function (newsContainerDiv) {
 ```
 ---
 
-### &lt;script src="pro.data.js">&lt;/script> <span id="data"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.data.js">&lt;/script> <span id="data"> |  </span><a href="#top">To top >></a>
 
 - introduces observable wrapper over JS-objects and arrays:
 
@@ -284,7 +284,7 @@ var value = newsList(); // Evaluated into an empty array
 
 ---
 
-### &lt;script src="pro.view.js">&lt;/script> <span id="view"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.view.js">&lt;/script> <span id="view"> |  </span><a href="#top">To top >></a>
 
 - Introduces UI-view which can be binded to model. Sample with markup loaded via `pro-load`:
 
@@ -337,7 +337,7 @@ newsList.forEach(function (newsModel) {
 
 ---
 
-### &lt;script src="pro.mvvm.js">&lt;/script> <span id="mvvm"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.mvvm.js">&lt;/script> <span id="mvvm"> |  </span><a href="#top">To top >></a>
 
 - Model-View-ViewModel implementation. ViewModel here is an observable `pro.data` object binded to HTML-element as following:
 
@@ -351,11 +351,11 @@ Here is how markup looks like:
 
 ```html
 <div id="news-container">
-    <div pro="hide(newsList.length === 0)">There are no news to read.</div>
+    <div pro="show(newsList.length === 0)">There are no news to read.</div>
     <div pro="each(newsList, view('news-view'))">
         <!-- Here will be inserted list of news view -->
     </div>
-    <div pro="show(newsList.length > 0)">Happy reading!</div>
+    <div pro="hide(newsList.length === 0)">Happy reading!</div>
 </div>
 ```
 
@@ -368,7 +368,7 @@ viewModel.newsList([{ topic: '...', text: '...' }]);
 ```
 ---
 
-### &lt;script src="pro.time.js">&lt;/script> <span id="time"> |  </span><a href="#top">To Top >></a>
+### &lt;script src="pro.time.js">&lt;/script> <span id="time"> |  </span><a href="#top">To top >></a>
 
 - contains time-related helpers available via `pro.time` object.
 
