@@ -8,11 +8,14 @@
 <body>
     <h1>Pro JS Example</h1>
 
-    <h2>News List:</h2>
     <div pro-load="news-component.html"></div>
+    
+    <div>
+        <a id="no-news-link">No news</a> | <a id="some-news-link">Load news</a>
+    </div>
 
     <footer>
-        <p><a href="/">Back</a> to documentation</p>
+        <p><a href="../">Back</a> to documentation</p>
     </footer>
 
     <article pro-load="news-template.html" hidden></article>
