@@ -1,5 +1,5 @@
-﻿<div pro="show(newsList.length === 0)">There are no news to read.</div>
+﻿<h2>News List:</h2>
 
+<div pro="show(newsList.length === 0)">There are no news to read.</div>
 <div pro="each(newsList, view('news-view'))"></div>
-
 <div pro="hide(newsList.length === 0)">Happy reading!</div>
